--- a/our-web-designing-company-service-page.html
+++ b/our-web-designing-company-service-page.html
@@ -133,7 +133,6 @@
             years of experience in Web and SEO Solutions.
             We can convert your ideas into reality. We create cost-effective, award-winning 
             solutions for our clients to grab digital space & create new business opportunities.
-            <br>
             Over the past 1 year, we've partnered with nearly 10+ companies, big and small, 
             across multiple industries develop an online presence that resonates with their 
             customers, out-perform their competitors, and add to their bottom-line . From Website 
@@ -145,22 +144,21 @@
   <section class="what-we-do-card">
       <div class="container">
         <!---card 1-->
-          <div class="card-1 ">
-              <div>
+          <div class="card">
+              <div class="top">
                   <img src="../Resources/Service-page/card-1-left-min.png" alt="Best Web design and Development company in Palakkad kerala">
               </div>
-              <div>
+              <div class="down">
                   <h2>Web / E-commerce Design & Development</h2>
                   <p>
                     Since 2020, we have designed 10+ of websites for clients in many different industries.
-                     We’ve had the opportunity to work with some great clients in Palakkad, kerala , 
-                     Tamil nadu, and all over India.
-                     <br>
-                     We take your investment in your business’ website and online marketing very seriously.
-                     With critical focus on providing our clients the best web design solutions in Palakkad ,
-                     kerala , and all over India . Hand-crafted and user friendly while providing innovative
-                     website development and digital marketing that delivers actual results.  We are a 
-                     friends-owned and operated business established in 2006.
+                    We’ve had the opportunity to work with some great clients in Palakkad, kerala , 
+                    Tamil nadu, and all over India.
+                    We take your investment in your business’ website and online marketing very seriously.
+                    With critical focus on providing our clients the best web design solutions in Palakkad ,
+                    kerala , and all over India . Hand-crafted and user friendly while providing innovative
+                    website development and digital marketing that delivers actual results.  We are a 
+                    friends-owned and operated business established in 2006.
                   </p>
                   <div class="btn-group">
                     <a href="#" class="btn"> PRICING FOR OUR WEB SERVICES </a>
@@ -169,21 +167,20 @@
               </div>
           </div>
           <!---card 2-->
-          <div class="card-1">
-            <div>
-                <img src="Resources/Service-page/card-1-right-min.png" alt="Best Web design and Development company in Palakkad kerala">
-            </div>
-            <div>
+          <div class="card">
+            <div class="top">
+                <img src="../Resources/Service-page/card-1-right-min.png" alt="Best Web design and Development company in Palakkad kerala">
+            </div> 
+            <div class="down">
                 <h2>Logo designing & UI / UX designing</h2>
                 <p>
                   Anyone can create a ‘nice’ logo and ui designing. We prefer to create memorable brands. Well-designed logos and 
                   best UI have power. Colours send signals. Shapes express safety, trust, or even authority. The right design choices 
                   elevate your brand and connect you to your audience. Through tenacious creativity, consistency and skills and Webfine 
                   strength, we shape and reinvent custom logos and UI / UX from scratch.
-                   <br>
-                   Over the past 1+ years, we have worked and collaborated with a plethora of clients, from small local businesses to 
-                   multi-national global brands. Regardless of size, stature or needs, we’re here to aid you in the process of creating 
-                   your brand.
+                  Over the past 1+ years, we have worked and collaborated with a plethora of clients, from small local businesses to 
+                  multi-national global brands. Regardless of size, stature or needs, we’re here to aid you in the process of creating 
+                  your brand.
                 </p>
                 <div class="btn-group">
                   <a href="#" class="btn"> PRICING FOR OUR WEB SERVICES </a>
@@ -192,21 +189,19 @@
             </div>
         </div>
         <!---card 3-->
-        <div class="card-1">
-          <div>
-              <img src="Resources/Service-page/card-2-left-min.png" alt="Best Web design and Development company in Palakkad kerala">
+        <div class="card">
+          <div class="top">
+              <img src="../Resources/Service-page/card-2-left-min.png" alt="Best Web design and Development company in Palakkad kerala">
           </div>
-          <div>
+          <div class="down">
               <h2>Social media marketing with (Instagram , Facebook)</h2>
               <p>
                 We conceive and pursue Social Media Marketing (SMM) as a highly scientific process, which is brought and applied 
                 in stages through sustained effort and consistent approaches.
-                 <br>
-                 And we are the one of the best in palakkad kerala and we made some instagram account increase traffice and sales 
-                 by our Webfine strategies
-                 <br>
-                 Our SMM experts will guide you throughout the entire process, from account creation to set-up and designing the 
-                 creative materials required to monitoring the daily activity and engagement of your followers.
+                And we are the one of the best in palakkad kerala and we made some instagram account increase traffice and sales 
+                by our Webfine strategies
+                Our SMM experts will guide you throughout the entire process, from account creation to set-up and designing the 
+                creative materials required to monitoring the daily activity and engagement of your followers.
               </p>
               <div class="btn-group">
                 <a href="#" class="btn"> PRICING FOR OUR WEB SERVICES </a>
@@ -215,23 +210,21 @@
           </div>
       </div>
       <!---card 4-->
-      <div class="card-1">
-        <div>
-            <img src="Resources/Service-page/card-2-right-min.png" alt="Best Web design and Development company in Palakkad kerala">
+      <div class="card">
+        <div class="top">
+            <img src="../Resources/Service-page/card-2-right-min.png" alt="Best Web design and Development company in Palakkad kerala">
         </div>
-        <div>
+        <div class="down">
             <h2>Search Engine Optimization (SEO)</h2>
             <p>
               Search Engine Optimization (SEO) will drive traffic to your website, increase the number of your visitors and 
               generates more potential customers – but only if you know how to do it right.
-               <br>
-               Our website allways will be on the top of the google search and we been increase our past customers sales 120% 
-               by using our webfine SEO strategies in the website
-               <br>
-               Webfine have deep knowledge and ideology about the benefits of getting the top position at internet searches long 
-               before seo came into action. The basic search engine optimization lies in website optimization done by the Webfine, 
-               Palakkad , Kerala . Webfine company that manages and follows various sets of procedures and advanced techniques to 
-               enhance the overall performance of your web page leading to better ranking. 
+              Our website allways will be on the top of the google search and we been increase our past customers sales 120% 
+              by using our webfine SEO strategies in the website
+              Webfine have deep knowledge and ideology about the benefits of getting the top position at internet searches long 
+              before seo came into action. The basic search engine optimization lies in website optimization done by the Webfine, 
+              Palakkad , Kerala . Webfine company that manages and follows various sets of procedures and advanced techniques to 
+              enhance the overall performance of your web page leading to better ranking. 
             </p>
             <div class="btn-group">
               <a href="#" class="btn"> PRICING FOR OUR WEB SERVICES </a>
@@ -252,12 +245,7 @@
       </div>
     </div>
   </section>
-  
-  <script src="app.js"></script>
-</body>
-</html>
-
-<!--Footer Section-->
+  <!--Footer Section-->
 
 <footer class="footer">
   <div class="container">
@@ -329,6 +317,12 @@
     <a href="#" class="bt-tag">Desigined and created by Webfine</a>
   </div>
 </footer>
+  
+  <script src="app.js"></script>
+</body>
+</html>
+
+
 
 
 
